src/patterns/showcase-banner/_showcase-banner.scss
/*************************************/
/* BEGIN Pattern: showcase-banner  */
/*************************************/
.showcase-banner {
	color: white;
	padding-top: 30px;


	&.sta-burgundy-1 {
		background-color: $sta-burgundy;
	}

	&.sta-burgundy-2 {
		background-color: darken($sta-burgundy, 7%);
	}

	&.sta-burgundy-3 {
		background-color: darken($sta-burgundy, 14%);
	}

	&.sta-dkgreen-1 {
		background-color: $sta-dkgreen;
	}

	&.sta-dkgreen-2 {
		background-color: darken($sta-dkgreen, 3.5%);
	}

	&.sta-dkgreen-3 {
		background-color: darken($sta-dkgreen, 7%);
	}

	&.sta-purple-1 {
		background-color: $sta-purple;
	}

	&.sta-purple-2 {
		background-color: darken($sta-purple, 7%);
	}

	&.sta-purple-3 {
		background-color: darken($sta-purple, 14%);
	}

	
	.fa {
		font-size: 7em;
		padding-top: 50px;
	}

	h3 {
		margin-top: 0;
	}
}


/*************************************/
/* END Pattern: showcase-banner    */
/*************************************/

